- Add GUI support for inspecting the call stack during debugging
- The backend executable is no longer linked against KDE libraries
- Objects, which are not acceptable in a varslot, will still be shown, there, with a warning		TODO: add a UI to override

--- Version 0.5.7 - Oct-23-2011
- Fixed: Would not system-defined text color for argument hints
- Do not treat arrays (which are not a matrix) as hierarchical named objects in the object browser
- Do not analyse more than 100000 name child-objects per object (avoids hangs on such extreme data)
- Fixed: Problems with using mclapply() inside RKWard
- Offer to add a new library location, automatically, if location selected for installation is not writable
- Reworked package installation / update dialog
- Fixed: Integrated help browser would not update navigation history when following page internal links
- Documentation on writing RKWard plugins is now accessible, locally
- The file filter for R script files is now configurable, and includes *.Rhistory, by default
- More obvious coloring of variable entry fields requiring user input in plugins
- Default size of the code display in plugin dialogs has been increased
- Removed support for downloading plugins using GHNS
- Added support for RKWard plugins shipped inside R packages 
- Fixed: PDFs and many other types of documents linked from help pages would not be opened, correctly
- Added support R 2.14.x
- Removed option to set options("printcmd")
- New option to run arbitrary (setup) commands in each session
- Added new pseudo graphics device "rk.printer.device" to provide printing via the KDE printer dialog
- Fixed: Printing was broken when kprinter is not available
- Support the results list new help.search() in R 2.14.x, which includes vignettes and demos
- rk.edit.files() and rk.show.files() gain parameter "prompt", which can be used to suppress user prompt
- Added function rk.demo(), which is similar to demo(), but opens the example script in a script editor window